@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,8 @@
  */
 
 package org.springframework.test.context.junit4.orm;
+
+import javax.persistence.PersistenceException;
 
 import org.hibernate.SessionFactory;
 import org.hibernate.exception.ConstraintViolationException;
@@ -72,7 +74,7 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 		assertNotNull("Should be able to find Sam", sam);
 		DriversLicense driversLicense = sam.getDriversLicense();
 		assertNotNull("Sam's driver's license should not be null", driversLicense);
-		assertEquals("Verifying Sam's driver's license number", new Long(1234), driversLicense.getNumber());
+		assertEquals("Verifying Sam's driver's license number", Long.valueOf(1234), driversLicense.getNumber());
 	}
 
 	@Test
@@ -107,10 +109,16 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	}
 
 	@Test(expected = ConstraintViolationException.class)
-	public void updateSamWithNullDriversLicenseWithSessionFlush() {
+	public void updateSamWithNullDriversLicenseWithSessionFlush() throws Throwable {
 		updateSamWithNullDriversLicense();
 		// Manual flush is required to avoid false positive in test
-		sessionFactory.getCurrentSession().flush();
+		try {
+			sessionFactory.getCurrentSession().flush();
+		}
+		catch (PersistenceException ex) {
+			// Wrapped in Hibernate 5.2, with the constraint violation as cause
+			throw ex.getCause();
+		}
 	}
 
 }
